# Q1_2026_Accel_Deepesh_Singh_Rathore

./: README.md
escrow-litesvm/: .gitignore
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
magicblock-er-example/: Anchor.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/tests/: er-state-account.ts
pricing-oracle/: Anchor.toml  package.json
pricing-oracle/programs/pricing-oracle/: Cargo.toml
pricing-oracle/programs/pricing-oracle/src/: lib.rs  state.rs
pricing-oracle/tests/: pricing-oracle.ts
rust-adv/: Cargo.toml  benchmark_res.txt
rust-adv/ch1/: Cargo.toml
rust-adv/ch1/src/: main.rs
transfer-hook-vault/: Anchor.toml  package.json
transfer-hook-vault/programs/transfer-hook-vault/: Cargo.toml
transfer-hook-vault/programs/transfer-hook-vault/src/: constatnt.rs  error.rs  lib.rs
tuktuk-escrow/: Anchor.toml  config.toml  package.json
tuktuk-escrow/cron/: cron.ts
tuktuk-escrow/programs/anchor-escrow/: Cargo.toml
tuktuk-escrow/programs/anchor-escrow/src/: lib.rs
tuktuk-escrow/tests/: test_schedule.ts
tuktuk-gpt-oracle/: Anchor.toml
tuktuk-gpt-oracle/app/: solana-gpt-oracle.json  solana-gpt-oracle.ts
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/: Cargo.toml
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/src/: error.rs  lib.rs  oldlib.rs
tuktuk-gpt-oracle/tests/: oldtest.ts  tuktuk-gpt-oracle.ts
whitelist-transfer-hook/: .gitignore  Anchor.toml
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: lib.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+37 files in other folders)
